[package]
name = "patrachar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "z2p"
path = "src/main.rs"

[lib]
name = "pc_lib"
path = "src/lib.rs"

[dependencies]
actix-web = "4.5.1"
reqwest = "0.11.24"
serde = { version = "1.0.197", faeatures = [ "derive" ]}
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
